// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelatedSystems component renders correctly when scoringweight equal & names equal 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="related-systems-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 Typography-underline css-1lgfm2o-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <div
                class="TappableCard-root ColorPair-white css-963r91"
                data-testid="tappable-card-box"
              >
                <a
                  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
                  data-gtm="{"id":"cta-click1","label":"system-1 - MC: sdp.system.readMore","action":"/en/s/path/"}"
                  data-testid="tappable-card-main"
                  href="/en/s/path/"
                  tabindex="0"
                >
                  <img
                    alt="system-1"
                    class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
                    data-testid="tappable-card-media"
                    draggable="false"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="TappableCard-body css-c6k36h"
                  >
                    <div
                      class="TappableCard-brandLogo TappableCard-negative css-p11bhc"
                      data-testid="tappable-card-body-brand-logo"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 TappableCard-title css-87i4k3-MuiTypography-root"
                      data-testid="tappable-card-body-title"
                    >
                      system-1
                    </h5>
                    <div
                      class="TappableCard-text"
                      data-testid="tappable-card-body-description"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
                        data-testid="typography"
                      >
                        system-desc
                      </p>
                      <div
                        class="css-1s6ecvv"
                        data-testid="systemProperties"
                      />
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </a>
                <div
                  class="TappableCard-footer css-1rg9dq1"
                >
                  <a
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"cta-click1","label":"system-1 - MC: sdp.system.readMore","action":"/en/s/path/"}"
                    data-testid="button"
                    href="/en/s/path/"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="ArrowForwardIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                        />
                      </svg>
                    </span>
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <div
                class="TappableCard-root ColorPair-white css-963r91"
                data-testid="tappable-card-box"
              >
                <a
                  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
                  data-gtm="{"id":"cta-click1","label":"system-1 - MC: sdp.system.readMore","action":"/en/s/path/"}"
                  data-testid="tappable-card-main"
                  href="/en/s/path/"
                  tabindex="0"
                >
                  <img
                    alt="system-1"
                    class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
                    data-testid="tappable-card-media"
                    draggable="false"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="TappableCard-body css-c6k36h"
                  >
                    <div
                      class="TappableCard-brandLogo TappableCard-negative css-p11bhc"
                      data-testid="tappable-card-body-brand-logo"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 TappableCard-title css-87i4k3-MuiTypography-root"
                      data-testid="tappable-card-body-title"
                    >
                      system-1
                    </h5>
                    <div
                      class="TappableCard-text"
                      data-testid="tappable-card-body-description"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
                        data-testid="typography"
                      >
                        system-desc
                      </p>
                      <div
                        class="css-1s6ecvv"
                        data-testid="systemProperties"
                      />
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </a>
                <div
                  class="TappableCard-footer css-1rg9dq1"
                >
                  <a
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"cta-click1","label":"system-1 - MC: sdp.system.readMore","action":"/en/s/path/"}"
                    data-testid="button"
                    href="/en/s/path/"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="ArrowForwardIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                        />
                      </svg>
                    </span>
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with no systems 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="related-systems-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 Typography-underline css-1lgfm2o-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
            data-testid="grid-container"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with scoringweight 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="related-systems-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 Typography-underline css-1lgfm2o-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <div
                class="TappableCard-root ColorPair-white css-963r91"
                data-testid="tappable-card-box"
              >
                <a
                  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
                  data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                  data-testid="tappable-card-main"
                  href="/en/s/path/"
                  tabindex="0"
                >
                  <img
                    alt="system-Name"
                    class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
                    data-testid="tappable-card-media"
                    draggable="false"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="TappableCard-body css-c6k36h"
                  >
                    <div
                      class="TappableCard-brandLogo TappableCard-negative css-p11bhc"
                      data-testid="tappable-card-body-brand-logo"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 TappableCard-title css-87i4k3-MuiTypography-root"
                      data-testid="tappable-card-body-title"
                    >
                      system-Name
                    </h5>
                    <div
                      class="TappableCard-text"
                      data-testid="tappable-card-body-description"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
                        data-testid="typography"
                      >
                        system-desc
                      </p>
                      <div
                        class="css-1s6ecvv"
                        data-testid="systemProperties"
                      />
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </a>
                <div
                  class="TappableCard-footer css-1rg9dq1"
                >
                  <a
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                    data-testid="button"
                    href="/en/s/path/"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="ArrowForwardIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                        />
                      </svg>
                    </span>
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <div
                class="TappableCard-root ColorPair-white css-963r91"
                data-testid="tappable-card-box"
              >
                <a
                  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
                  data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                  data-testid="tappable-card-main"
                  href="/en/s/path/"
                  tabindex="0"
                >
                  <img
                    alt="system-Name"
                    class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
                    data-testid="tappable-card-media"
                    draggable="false"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="TappableCard-body css-c6k36h"
                  >
                    <div
                      class="TappableCard-brandLogo TappableCard-negative css-p11bhc"
                      data-testid="tappable-card-body-brand-logo"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 TappableCard-title css-87i4k3-MuiTypography-root"
                      data-testid="tappable-card-body-title"
                    >
                      system-Name
                    </h5>
                    <div
                      class="TappableCard-text"
                      data-testid="tappable-card-body-description"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
                        data-testid="typography"
                      >
                        system-desc
                      </p>
                      <div
                        class="css-1s6ecvv"
                        data-testid="systemProperties"
                      />
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </a>
                <div
                  class="TappableCard-footer css-1rg9dq1"
                >
                  <a
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                    data-testid="button"
                    href="/en/s/path/"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="ArrowForwardIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                        />
                      </svg>
                    </span>
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with scoringweight equal & names sorted opposite 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="related-systems-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 Typography-underline css-1lgfm2o-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <div
                class="TappableCard-root ColorPair-white css-963r91"
                data-testid="tappable-card-box"
              >
                <a
                  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
                  data-gtm="{"id":"cta-click1","label":"system-1 - MC: sdp.system.readMore","action":"/en/s/path/"}"
                  data-testid="tappable-card-main"
                  href="/en/s/path/"
                  tabindex="0"
                >
                  <img
                    alt="system-1"
                    class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
                    data-testid="tappable-card-media"
                    draggable="false"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="TappableCard-body css-c6k36h"
                  >
                    <div
                      class="TappableCard-brandLogo TappableCard-negative css-p11bhc"
                      data-testid="tappable-card-body-brand-logo"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 TappableCard-title css-87i4k3-MuiTypography-root"
                      data-testid="tappable-card-body-title"
                    >
                      system-1
                    </h5>
                    <div
                      class="TappableCard-text"
                      data-testid="tappable-card-body-description"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
                        data-testid="typography"
                      >
                        system-desc
                      </p>
                      <div
                        class="css-1s6ecvv"
                        data-testid="systemProperties"
                      />
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </a>
                <div
                  class="TappableCard-footer css-1rg9dq1"
                >
                  <a
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"cta-click1","label":"system-1 - MC: sdp.system.readMore","action":"/en/s/path/"}"
                    data-testid="button"
                    href="/en/s/path/"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="ArrowForwardIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                        />
                      </svg>
                    </span>
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <div
                class="TappableCard-root ColorPair-white css-963r91"
                data-testid="tappable-card-box"
              >
                <a
                  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
                  data-gtm="{"id":"cta-click1","label":"system-2 - MC: sdp.system.readMore","action":"/en/s/path/"}"
                  data-testid="tappable-card-main"
                  href="/en/s/path/"
                  tabindex="0"
                >
                  <img
                    alt="system-2"
                    class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
                    data-testid="tappable-card-media"
                    draggable="false"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="TappableCard-body css-c6k36h"
                  >
                    <div
                      class="TappableCard-brandLogo TappableCard-negative css-p11bhc"
                      data-testid="tappable-card-body-brand-logo"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 TappableCard-title css-87i4k3-MuiTypography-root"
                      data-testid="tappable-card-body-title"
                    >
                      system-2
                    </h5>
                    <div
                      class="TappableCard-text"
                      data-testid="tappable-card-body-description"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
                        data-testid="typography"
                      >
                        system-desc
                      </p>
                      <div
                        class="css-1s6ecvv"
                        data-testid="systemProperties"
                      />
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </a>
                <div
                  class="TappableCard-footer css-1rg9dq1"
                >
                  <a
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"cta-click1","label":"system-2 - MC: sdp.system.readMore","action":"/en/s/path/"}"
                    data-testid="button"
                    href="/en/s/path/"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="ArrowForwardIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                        />
                      </svg>
                    </span>
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with scoringweight equal 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="related-systems-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 Typography-underline css-1lgfm2o-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <div
                class="TappableCard-root ColorPair-white css-963r91"
                data-testid="tappable-card-box"
              >
                <a
                  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
                  data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                  data-testid="tappable-card-main"
                  href="/en/s/path/"
                  tabindex="0"
                >
                  <img
                    alt="system-Name"
                    class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
                    data-testid="tappable-card-media"
                    draggable="false"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="TappableCard-body css-c6k36h"
                  >
                    <div
                      class="TappableCard-brandLogo TappableCard-negative css-p11bhc"
                      data-testid="tappable-card-body-brand-logo"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 TappableCard-title css-87i4k3-MuiTypography-root"
                      data-testid="tappable-card-body-title"
                    >
                      system-Name
                    </h5>
                    <div
                      class="TappableCard-text"
                      data-testid="tappable-card-body-description"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
                        data-testid="typography"
                      >
                        system-desc
                      </p>
                      <div
                        class="css-1s6ecvv"
                        data-testid="systemProperties"
                      />
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </a>
                <div
                  class="TappableCard-footer css-1rg9dq1"
                >
                  <a
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                    data-testid="button"
                    href="/en/s/path/"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="ArrowForwardIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                        />
                      </svg>
                    </span>
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <div
                class="TappableCard-root ColorPair-white css-963r91"
                data-testid="tappable-card-box"
              >
                <a
                  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
                  data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                  data-testid="tappable-card-main"
                  href="/en/s/path/"
                  tabindex="0"
                >
                  <img
                    alt="system-Name"
                    class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
                    data-testid="tappable-card-media"
                    draggable="false"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="TappableCard-body css-c6k36h"
                  >
                    <div
                      class="TappableCard-brandLogo TappableCard-negative css-p11bhc"
                      data-testid="tappable-card-body-brand-logo"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 TappableCard-title css-87i4k3-MuiTypography-root"
                      data-testid="tappable-card-body-title"
                    >
                      system-Name
                    </h5>
                    <div
                      class="TappableCard-text"
                      data-testid="tappable-card-body-description"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
                        data-testid="typography"
                      >
                        system-desc
                      </p>
                      <div
                        class="css-1s6ecvv"
                        data-testid="systemProperties"
                      />
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </a>
                <div
                  class="TappableCard-footer css-1rg9dq1"
                >
                  <a
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                    data-testid="button"
                    href="/en/s/path/"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="ArrowForwardIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                        />
                      </svg>
                    </span>
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly with systems 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="related-systems-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 Typography-underline css-1lgfm2o-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <div
                class="TappableCard-root ColorPair-white css-963r91"
                data-testid="tappable-card-box"
              >
                <a
                  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
                  data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                  data-testid="tappable-card-main"
                  href="/en/s/path/"
                  tabindex="0"
                >
                  <img
                    alt="system-Name"
                    class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
                    data-testid="tappable-card-media"
                    draggable="false"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="TappableCard-body css-c6k36h"
                  >
                    <div
                      class="TappableCard-brandLogo TappableCard-negative css-p11bhc"
                      data-testid="tappable-card-body-brand-logo"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 TappableCard-title css-87i4k3-MuiTypography-root"
                      data-testid="tappable-card-body-title"
                    >
                      system-Name
                    </h5>
                    <div
                      class="TappableCard-text"
                      data-testid="tappable-card-body-description"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
                        data-testid="typography"
                      >
                        system-desc
                      </p>
                      <div
                        class="css-1s6ecvv"
                        data-testid="systemProperties"
                      />
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </a>
                <div
                  class="TappableCard-footer css-1rg9dq1"
                >
                  <a
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                    data-testid="button"
                    href="/en/s/path/"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="ArrowForwardIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                        />
                      </svg>
                    </span>
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders correctly without categories 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="related-systems-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 Typography-underline css-1lgfm2o-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <div
                class="TappableCard-root ColorPair-white css-963r91"
                data-testid="tappable-card-box"
              >
                <a
                  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
                  data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                  data-testid="tappable-card-main"
                  href="/en/s/path/"
                  tabindex="0"
                >
                  <img
                    alt="system-Name"
                    class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
                    data-testid="tappable-card-media"
                    draggable="false"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="TappableCard-body css-c6k36h"
                  >
                    <div
                      class="TappableCard-brandLogo TappableCard-negative css-p11bhc"
                      data-testid="tappable-card-body-brand-logo"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 TappableCard-title css-87i4k3-MuiTypography-root"
                      data-testid="tappable-card-body-title"
                    >
                      system-Name
                    </h5>
                    <div
                      class="TappableCard-text"
                      data-testid="tappable-card-body-description"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
                        data-testid="typography"
                      >
                        system-desc
                      </p>
                      <div
                        class="css-1s6ecvv"
                        data-testid="systemProperties"
                      />
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </a>
                <div
                  class="TappableCard-footer css-1rg9dq1"
                >
                  <a
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                    data-testid="button"
                    href="/en/s/path/"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="ArrowForwardIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                        />
                      </svg>
                    </span>
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedSystems component renders systems correctly without classifications 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="related-systems-section"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div>
          <h2
            class="MuiTypography-root MuiTypography-h2 Typography-underline css-1lgfm2o-MuiTypography-root"
            data-testid="typography"
          >
            MC: sdp.recommendedSystemsTitle
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
              data-testid="system-card-system-code"
            >
              <div
                class="TappableCard-root ColorPair-white css-963r91"
                data-testid="tappable-card-box"
              >
                <a
                  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
                  data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                  data-testid="tappable-card-main"
                  href="/en/s/path/"
                  tabindex="0"
                >
                  <img
                    alt="system-Name"
                    class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
                    data-testid="tappable-card-media"
                    draggable="false"
                    src="http://localhost:8000/image-main-source.jpg"
                  />
                  <div
                    class="TappableCard-body css-c6k36h"
                  >
                    <div
                      class="TappableCard-brandLogo TappableCard-negative css-p11bhc"
                      data-testid="tappable-card-body-brand-logo"
                    />
                    <h5
                      class="MuiTypography-root MuiTypography-h5 TappableCard-title css-87i4k3-MuiTypography-root"
                      data-testid="tappable-card-body-title"
                    >
                      system-Name
                    </h5>
                    <div
                      class="TappableCard-text"
                      data-testid="tappable-card-body-description"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
                        data-testid="typography"
                      >
                        system-desc
                      </p>
                      <div
                        class="css-1s6ecvv"
                        data-testid="systemProperties"
                      />
                    </div>
                  </div>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </a>
                <div
                  class="TappableCard-footer css-1rg9dq1"
                >
                  <a
                    class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
                    data-gtm="{"id":"cta-click1","label":"system-Name - MC: sdp.system.readMore","action":"/en/s/path/"}"
                    data-testid="button"
                    href="/en/s/path/"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                        data-testid="ArrowForwardIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                        />
                      </svg>
                    </span>
                    MC: sdp.system.readMore
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SystemCard renders correctly with related system 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-3 Grid-item css-1coitkr-MuiGrid2-root"
    data-testid="system-card-related-system-1"
  >
    <div
      class="TappableCard-root ColorPair-white css-963r91"
      data-testid="tappable-card-box"
    >
      <a
        class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
        data-gtm="{"id":"gtm-id"}"
        data-testid="tappable-card-main"
        href="/en/related-system-path/"
        tabindex="0"
      >
        <img
          alt="related-ssytem-name"
          class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
          data-testid="tappable-card-media"
          draggable="false"
          src="http://localhost:8000/image-main-source.jpg"
        />
        <div
          class="TappableCard-body css-c6k36h"
        >
          <div
            class="TappableCard-brandLogo TappableCard-negative css-p11bhc"
            data-testid="tappable-card-body-brand-logo"
          />
          <h5
            class="MuiTypography-root MuiTypography-h5 TappableCard-title css-87i4k3-MuiTypography-root"
            data-testid="tappable-card-body-title"
          >
            related-ssytem-name
          </h5>
          <div
            class="TappableCard-text"
            data-testid="tappable-card-body-description"
          >
            <p
              class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
              data-testid="typography"
            >
              related-short-desc
            </p>
            <div
              class="css-1s6ecvv"
              data-testid="systemProperties"
            />
          </div>
        </div>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </a>
      <div
        class="TappableCard-footer css-1rg9dq1"
      >
        <a
          class="MuiButtonBase-root MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-root Button-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium css-1ga0prt-MuiButtonBase-root-MuiButton-root"
          data-gtm="{"id":"gtm-id"}"
          data-testid="button"
          href="/en/related-system-path/"
          tabindex="0"
        >
          <span
            class="MuiButton-startIcon Button-startIcon Button-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
              data-testid="ArrowForwardIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              />
            </svg>
          </span>
          MC: sdp.system.readMore
          <span
            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
